# folio

./: .gitignore  CLAUDE.md  Cargo.toml  folio-cli.skill
docs/superpowers/plans/: 2026-04-05-global-incremental-index.md  2026-04-06-agent-memory-enhancement.md
docs/superpowers/specs/: 2026-04-04-folio-markdown-cli-design.md  2026-04-05-global-incremental-index-design.md
plugins/: agent_memory.lua
src/: cli.rs  main.rs  models.rs
src/commands/: graph.rs
src/index/: builder.rs  mod.rs  scanner.rs
src/parser/: frontmatter.rs  markdown.rs
src/plugins/: loader.rs  runtime.rs
src/query/: executor.rs  lexer.rs  mod.rs  parser.rs
src/template/: engine.rs
