[package]
name = "folio"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
petgraph = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
twox-hash = "2"
mlua = { version = "0.11.6", features = ["luajit", "vendored"] }

[dev-dependencies]
tempfile = "3.27.0"
